chore: init example-provider

--- a/packages/example-provider/package.json
+++ b/packages/example-provider/package.json
@@ -1,12 +1,12 @@
 {
   "name": "example-provider",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  }
 }
