--- a/packages/example-next-app/package.json
+++ b/packages/example-next-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "example-provider": "workspace:*",
     "@openfeature/react-sdk": "^1.0.0",
     "@openfeature/server-sdk": "^1.18.0",
     "next": "15.3.5",
