--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,8 @@
 packages:
   - packages/*
+
+catalog:
+  '@openfeature/react-sdk': ^1.0.0
+  '@openfeature/server-sdk': ^1.18.0
+  '@openfeature/core': ^1.8.1
+  typescript: ^5.8.3
