--- a/packages/example-server-provider/package.json
+++ b/packages/example-server-provider/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "example-provider",
+  "name": "example-server-provider",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
+  "dependencies": {
+    "@openfeature/core": "catalog:"
+  },
   "devDependencies": {
-    "typescript": "^5.8.3"
+    "typescript": "catalog:"
   }
 }
