chore: try impl provider

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["esnext"],
+    "lib": ["esnext", "dom"],
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "esModuleInterop": true,
