--- a/packages/example-server-provider/package.json
+++ b/packages/example-server-provider/package.json
@@ -7,6 +7,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@openfeature/server-sdk": "catalog:",
     "@openfeature/core": "catalog:"
   },
   "devDependencies": {
